adding click events

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
         background-color: lightgray;
-        line-height: 1.5mm;
+        line-height: 1.5m;
     }
     header {
         background-color: black;
@@ -22,8 +22,12 @@
     }
     #container {
         width: 90%;
+
         margin: auto;
         padding: 20px;
+    }
+    .para1 {
+        margin-bottom: 20px;
     }
 </style>
 </head>
@@ -35,7 +39,18 @@
 <h3>Mouse Events</h3>
 <button id="btn1">Button</button>
 <button id="btn2">Button 2</button>
+<p class="para1">jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</p>
     </div>
+    <script>
     
+       $('#btn1').click(function(){
+            $('.para1').toggle();
+        });
+
+        $('#btn2').hover(function(){
+            $('.para1').toggle();
+        });
+       $('p.para1').css({color:'red',background: '#ccc'});
+    </script>
 </body>
 </html>
